src/test/deca/context/valid/declClass-fourClassesWithSameFieldsAndMethods.deca
class A {
    int x;
    float rere(int y, boolean isTrue){
        y = 3 + 2;
        isTrue = false;
    }
    void rienAFaire(float a){
        a = 3 + 2.0 + 4;
    }
}

class B extends A {}

class C extends B {
    int r = 4;
    float v = 2.000;
    protected float c = 100;
    int rere(int y, boolean isTrue){
        y = 1000;
        isTrue = true;
    }
}

class D extends C {
    int m;
    float n;
    protected int x = 10000;
    int rienAFaire(int a){
        a = 10000;
    }
}