src/test/deca/context/invalid/declMethod-wrongSignatureTypeIntBool.deca
class A {
    int coco = 3;

    void boobs(int m, float p) {
    }
}

class B extends A {
    void boobs(boolean a, float p) {
    }
}